Actual html document

--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,11 @@
-<h1>hi there</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>An webpage.</title>
+  </head>
+
+  <body>
+    Hi there...
+  </body>
+
+</html>
