--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 
   <body>
     Hi there...
-    <img src="seF8yoL.gif">rockzo</img>
+    <img src="seF8yoL.gif" alt="rockzo"></img>
   </body>
 
 </html>
